# rusty-language-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2024-05-26-100701_create_dictionaries/: down.sql  up.sql
migrations/2024-05-26-100701_create_sets/: up.sql
migrations/2024-05-26-100701_create_study_sets/: down.sql  up.sql
src/: main.rs
src/api/: handlers.rs  openapi.rs  routes.rs
src/api/v1/: handlers.rs  openapi.rs  routes.rs
src/db/: connection.rs  migrations.rs  mod.rs  models.rs  schema.rs
