[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
dotenvy = "0.15"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
